@@ -1,3 +1,13 @@
+Mon Apr 14 19:17:26 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * dds/DCPS/RequestedDeadlineWatchdog.cpp:
+
+          Additional Watchdog logging at debug level 6 and up
+
+        * tests/DCPS/Deadline/run_test.pl:
+
+          Run test at debug level 6.
+
 Mon Apr 14 19:01:34 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/Priority/publisher_main.cpp:
